# carwash

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile
.cargo/: config.toml
.github/workflows/: ci.yml
src/: app.rs  cache.rs  events.rs  handlers.rs  lib.rs  main.rs  project.rs  runner.rs  settings.rs  tree.rs  ui.rs
src/components/: dependencies.rs  filter.rs  help.rs  mod.rs  output.rs  palette.rs  progress.rs  projects.rs  settings.rs  spinner.rs  status.rs  text_input.rs  tree_view.rs  updater.rs
src/config/: keybinding_config.rs  mod.rs  theme_config.rs
src/ui/: layout.rs  mod.rs  modal.rs  styles.rs  theme.rs
