[package]
name = "carwash"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo-lock = "10.1.0"
clap = { version = "4.5.50", features = ["derive"] }
crates_io_api = "0.12.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
fuzzy-matcher = "0.3.7"
glob = "0.3.3"
ratatui = "0.29.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tui-input = "0.14.0"
tui-tree-widget = "0.23.1"
walkdir = "2.5.0"
chrono = "0.4"
anyhow = "1.0"
