[package]
name = "carwash"
version = "0.1.3"
edition = "2024"
authors = ["Nicholas Paterno <nick@epistates.com>"]
description = "A beautiful TUI for managing multiple Rust projects with workspace support, dependency management, and parallel command execution"
readme = "README.md"
homepage = "https://github.com/epistates/carwash"
repository = "https://github.com/epistates/carwash"
documentation = "https://docs.rs/carwash"
license = "MIT"
keywords = ["cargo", "tui", "workspace", "dependencies", "rust"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.85.0"

[lib]
name = "carwash"
path = "src/lib.rs"

[[bin]]
name = "carwash"
path = "src/main.rs"

[profile.release]
opt-level = 3              # Maximum optimization
lto = "fat"                # Full link-time optimization
codegen-units = 1          # Better optimization, slower compile
strip = true               # Strip symbols for smaller binary
panic = "abort"            # Smaller binary, no stack unwinding

[profile.dev]
opt-level = 0              # Fast compilation
debug = true               # Full debug info

[lints.clippy]
# Allow some pedantic lints that don't affect functionality
new_without_default = "allow"
useless_format = "allow"
too_many_arguments = "allow"
module_name_repetitions = "allow"

[dependencies]
cargo-lock = "10.1.0"
clap = { version = "4.5.50", features = ["derive"] }
crates_io_api = "0.12.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
fuzzy-matcher = "0.3.7"
glob = "0.3.3"
ratatui = "0.29.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tui-input = "0.14.0"
tui-tree-widget = "0.23.1"
walkdir = "2.5.0"
chrono = "0.4"
anyhow = "1.0"
